# alOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  linker.ld
boot/: first_stage-x86_64.asm  second_stage-x86_64.asm
kernel/: kernel.c
